2.31   (?? June 2001)
- fixed bug in centroid
- change #include order.

2.30   (19 June 2001)
- added centroid

2.29   (18 June 2001)
- Move definition of CGAL_REP_CLASS_DEFINED.

2.28   (7 June 2001)
- refixed compare_x_at_y()
- Move homogeneous-only files from Kernel_basic to H2.

2.27   (1  May 2001)
- angle()
- fixed compare_x_at_y() 

2.26   (12  Apr 2001)
- Fix off by one error in Triangle::vertex().

2.25   (9  Apr 2001)
- #include<CGAL/Homogeneous.h> and #include<CGAL/Arithmetic_filter.h> were not
  compatible together.

2.24   (20 Mar 2001)
- Added squared_radius().

2.23   (16 Mar 2001)
- Added constructor Vector(Point, Point).
- side_of_bounded_circle(3 points).

2.22   (6 Mar 2001)
- Remove useless friends in PVDH2.h and delete point_vector_declarationsH2.h.
- Make operator*(VectorH2, VectorH2) a member function.

2.21   (28 Feb 2001)
- More VC++ fixes.

2.20   (21 Feb 2001)
- Homogeneous_converter<>.

2.19   (21 Feb 2001)
- VC++ fixes.

2.18   (19 Feb 2001)
- Modified return types "typename R::RT" for VC++.

2.17   (15 Feb 2001)
- Add some "#define typename" to please VC++.

2.16   (14 Feb 2001)
- Add forgotten typedefs in IdentityH2.
- added min_coord(), max_coord() in Iso_rectangle_2 and new constructor
- Remove useless destructors in PointH2, VectorH2, DirectionH2.

2.15   (13 Feb 2001)
- Macro cleanups.
- area() functions added
- Simple_homogeneous.
- Remove old style casts.
- Put the class Data_accessorH2 in its own file.

2.14   (18 Jan 2001)
- Remove Triangle_repH2 copy ctor, since it caused a warning.

2.13   (11 Oct 2000)

- use of keyword 'or' removed in CircleH2

2.12   (03 Aug 2000)

- bug in input operator of CircleH2 fixed (reported by Matthias)

2.11   (26 Jul 2000)

- in-place-new replaced by Handle_for( RefCounted ) constructor calls
  and calls of Handle_for::initialize_with( RefCounted )
- identical(.) and id() member functions removed (base class Handle_for<> 
  has a member function identical(.) since version 3.9)
